# qode_backtesting_app

./: README.md
backend/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py  init_db.py
backend/app/data/: seed_data.py  tickers.py
backend/app/models/: __init__.py  stock.py
backend/app/schemas/: backtest.py
backend/app/services/: backtest_engine.py  backtest_service.py
frontend/: .env.example  index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: DataCoverageBadge.jsx  DrawdownChart.jsx  EquityCurveChart.jsx  MetricsGrid.jsx  RebalanceLogsTable.jsx  StrategyForm.jsx  WarningsBanner.jsx  WinnersLosersTable.jsx  ui.jsx
frontend/src/utils/: constants.js  csv.js  format.js
