[project]
name = "qode-backtester-backend"
version = "0.1.0"
description = "Backtesting engine for equity fundamental strategies (Qode assignment)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "yfinance>=0.2.49",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.3",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
]
